--- a/ipa/index.html
+++ b/ipa/index.html
@@ -6,7 +6,7 @@
   <body>
     <ul>
       <h2 id="Apps">The &beta;leeding edge</h2>
-      <li><a href="itms-services://?action=download-manifest&url=https://ci.alecgorge.com/job/PhishOD/lastSuccessfulBuild/artifact/ipa/PhishOD%20Beta.plist">Install PhishOD &beta;</a></li>
+      <li><a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fci.alecgorge.com%2Fjob%2FPhishOD%2FlastSuccessfulBuild%2Fartifact%2Fipa%2FPhishOD%20Beta.plist">Install PhishOD &beta;</a></li>
     </ul>
   </body>
 </html>
