--- a/ipa/index.html
+++ b/ipa/index.html
@@ -6,7 +6,19 @@
   <body>
     <ul>
       <h2 id="Apps">The &beta;leeding edge</h2>
+      <p>You need to open this page (<a href="http://alecgorge.com/phish/beta/">http://alecgorge.com/phish/beta/</a>) on your phone.</p>
       <li><a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fci.alecgorge.com%2Fjob%2FPhishOD%2FlastSuccessfulBuild%2Fartifact%2Fipa%2FPhishODBeta.plist">Install PhishOD &beta;</a></li>
+
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-27002013-2', 'auto');
+        ga('send', 'pageview');
+
+      </script>
     </ul>
   </body>
 </html>
